// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchMembers/> Should render <SearchMembers /> with one member 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Recherche par Nom
    </h1>
    <form
      autocomplete="off"
      class="af-filter-inline"
      id="form-search-members"
      name="form-search-members"
    >
      <div
        class="af-filter-inline__default af-filter-inline__default--search-distributors"
      >
        <div
          class="af-filter-inline__field"
        >
          <div
            class="col-md-12"
          >
            <div
              class="af-form__text"
            >
              <label
                class="af-form__group-label"
                for="name"
              >
                Nom du membre
              </label>
              <input
                autocomplete="search-name"
                class="af-form__input-text"
                id="name"
                name="name"
                placeholder="John Doe"
                type="text"
                value=""
              />
              <small
                class="af-form__help"
              >
                Minimum 3 caractères pour un nom
              </small>
            </div>
          </div>
        </div>
        <button
          class="btn af-btn af-btn--hasiconLeft af-btn--submitconfirm af-btn--disabled"
          disabled=""
          form="form-search-members"
          type="submit"
        >
          <span
            class="af-btn__text"
          >
            Rechercher
          </span>
          <i
            class="glyphicon glyphicon-search"
          />
        </button>
      </div>
    </form>
    <div
      class="af-loader"
    >
      <h2
        class="af-title"
      >
        Tableau des membres
      </h2>
      <table
        class="af-table"
      >
        <thead
          aria-label="table-header"
          class="af-table__thead"
        >
          <tr
            aria-label="table-header-line"
            class="af-table__tr"
          >
            <th
              aria-label="table-body-line"
              class="af-table__th"
              role="columnheader"
            >
              <span
                class="af-table__tr-label"
              >
                Prénom du membre
              </span>
            </th>
            <th
              aria-label="table-body-line"
              class="af-table__th"
              role="columnheader"
            >
              <span
                class="af-table__tr-label"
              >
                Nom du membre
              </span>
            </th>
            <th
              aria-label="table-body-line"
              class="af-table__th"
              role="columnheader"
            >
              <span
                class="af-table__tr-label"
              >
                Identifiant du membre
              </span>
            </th>
            <th
              aria-label="table-body-line"
              class="af-table__th"
              role="columnheader"
            >
              <span
                class="af-table__tr-label"
              >
                Actions
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          aria-label="table-body"
          class="af-table__body"
        >
          <tr
            aria-label="table-body-line"
            class="af-table__tr"
          >
            <td
              class="af-table__cell"
            >
              nom du membre
            </td>
            <td
              class="af-table__cell"
            >
              1254689759
            </td>
            <td
              class="af-table__cell af-table__cell--actions"
            >
              <div
                class="af-loader af-loader--fullscreen"
              >
                <button
                  aria-label="download-link"
                  class="af-link af-link--hasIconLeft af-link--download"
                  type="button"
                >
                  <svg
                    alt="download-csv"
                    aria-labelledby="title"
                    class="af-download-link__icon"
                    role="img"
                    viewBox="0 0 100 100"
                  >
                    <title>
                      download-csv
                    </title>
                    <path
                      d="M70.4 5H13.9v90h72.2V20.7L70.4 5zM83 91.2H50v-7.8h24.7V67.8H49.9v-5.2L63 39.8h-6.8V16.9H43.5v22.9h-6.8l13.1 22.7v5.2H25v15.6h24.8v7.8H16.7V8.4h53.8v12.3H83v70.5zM49.7 76.3l-1-.4c-.8-.3-1.6-1-1.6-2.2 0-1.3 1.2-2.4 2.9-2.4.9 0 1.9.3 2.6 1l-1 1.3c-.5-.4-1-.6-1.6-.6-.5 0-.8.2-.8.5 0 .4.4.5 1.2.8l.9.4c1 .4 1.5 1.1 1.5 2.1 0 1.3-1.1 2.5-3 2.5-1 0-2.1-.4-3-1.1l1.2-1.4c.6.4 1.2.8 1.8.8.6 0 .9-.2.9-.6 0-.3-.4-.4-1-.7zm3.4-4.8h2.2l.8 3.4c.2.8.4 1.6.6 2.5.2-.8.4-1.6.6-2.5l.8-3.4h2.1l-2.3 7.8h-2.5l-2.3-7.8zm-9 6.1c.6 0 1.1-.3 1.4-.7l1.1 1.3c-.7.8-1.6 1.2-2.6 1.2-2 0-3.7-1.3-3.7-4 0-2.6 1.8-4.1 3.8-4.1 1 0 1.9.5 2.4 1l-1.1 1.3c-.4-.3-.8-.6-1.3-.6-.9 0-1.7.8-1.7 2.3 0 1.5.7 2.3 1.7 2.3z"
                    />
                  </svg>
                  <span
                    class="af-link__text"
                  >
                    Télécharger
                  </span>
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<SearchMembers/> Should render SearchMembers 1`] = `
<DocumentFragment>
  <div
    class="af-main container"
  >
    <h1
      class="af-title--content"
    >
      Recherche par Nom
    </h1>
    <form
      autocomplete="off"
      class="af-filter-inline"
      id="form-search-members"
      name="form-search-members"
    >
      <div
        class="af-filter-inline__default af-filter-inline__default--search-distributors"
      >
        <div
          class="af-filter-inline__field"
        >
          <div
            class="col-md-12"
          >
            <div
              class="af-form__text"
            >
              <label
                class="af-form__group-label"
                for="name"
              >
                Nom du membre
              </label>
              <input
                autocomplete="search-name"
                class="af-form__input-text"
                id="name"
                name="name"
                placeholder="John Doe"
                type="text"
                value=""
              />
              <small
                class="af-form__help"
              >
                Minimum 3 caractères pour un nom
              </small>
            </div>
          </div>
        </div>
        <button
          class="btn af-btn af-btn--hasiconLeft af-btn--submitconfirm af-btn--disabled"
          disabled=""
          form="form-search-members"
          type="submit"
        >
          <span
            class="af-btn__text"
          >
            Rechercher
          </span>
          <i
            class="glyphicon glyphicon-search"
          />
        </button>
      </div>
    </form>
    <div
      class="af-loader"
    >
      <h2
        class="af-title"
      >
        Tableau des membres
      </h2>
    </div>
  </div>
</DocumentFragment>
`;
